
[2010-05-18]
增加当前页面配制（数据）处理类（PageCfg.cpp）

[2010-05-18]
增加打包处理类（DataPack.cpp）

[2010-05-19]
1. 修改UrlDecode()的一个bug：串未尾有‘＋’时未转为空格；
2. 完成数据备份、还原功能；
3. 修改GetSizeOfFile()内的lstat()为stat()；

[2010-05-20]
1. 修改几个bug。注意，在打包数据时，要先关掉包数据，以使当
   前数据文件缓冲区内的数据也写入文件，再执行发送到前台操
   作，不然可能造成文件发送不完整的问题；

[2010-05-21]
1. 增加多模匹配处理类，应用于数据浏览的Tag_BrowseList::Get()
   中；
2. 修改使浏览页面显示长度自动适应客户端显示屏大小；

[2010-05-22]
1. 处理数据合并(导入、导出用户数据、菜单数据、页面数据等）；
2. 修改UserData::Set()，增加是否强制写入标志；
3. 修改附件删除功能；

[2010-05-23]
直接的Login页客户端设置屏幕高、宽Cookie记录；

[2010-05-24]
1. 完成注册用户、修改密码、取回密码页；
2. 修改登录，使验证出错时不刷新页面；
3. 完成类型下拉框项新增、修改页。（注：未检查标题重复项）

[2010-05-25]
1. 新增定时器类；
2. 加入定时清理无效Session代码；
3. 处理新、旧数据格式转换（主要是正文在图片显示代码，使用处
   部perl代码处理；
4. 书签合并（部分），使用perl处理；

[2010-05-26]
合并书签（完成，perl处理）

[2010-05-27]
1. 加入成功导入数据的提示；
2. 加入定时清理临时目录代码；

[2010-05-28]
加入日志设置配制页；

[2010-05-29]
1. 加入登录计数；
2. 使后登录者覆盖前登录者（即使前登录者无效）；

[2010-05-30]
1. 保存页面计数器；
2. 管理页中加入删除用户、显示系统在线时长等功能；
注：基本完成可用版本；

[2010-05-31]
1. 修正多模匹配中汉字找不到的问题（有、无符号字符间转换）；
2. 修正了几个页面显示代码；

[2010-06-01]
1. 增加几个环境变量，指定日志目录等；
2. 修改多模匹配中串为空的返回值； 
3. 修改页面中重登录提示（当ping能过时，也执行关闭）；

[2010-06-04]
1. 由环境变量（LOG_TERMINAL）决定日志输出到哪（默认为文件）；
2. 调整文件附件存储时文件名为url编码（汉字编码问题）；
3. 管理员页显示cpu使用率；

[2010-06-06]
再次修改关于附件文件名为ascii形式存放；

[2010-06-09]
修改图片列表显示bug（reading页面）

[2010-06-10]
修改在Edit页保存正文件时处理‘<’‘>’的问题（此时的‘<’‘>’应原字符保存）

[2010-06-11]
1. 修正在browse页中不能保存“字体字号”设置的bug（未设置修改时间字段）；
2. 提交后页面空白；

[2010-06-12]
修改多模匹配机bug：处于初始状态时，未匹配字符被删除（正常应保留）；

----二期[2011-05-04]---
[2011-05-03]
转换编码为utf8: CHANGES

[2011-05-04]
1. 转换所有src下的文件为utf8编码；
2. 调整用户是否有效、注册等函数；
3. 修改User::Cache::Get()中的锁处理；
4. 修改二期改造里标明的部分次要项，如注释等；

[2011-05-06]
1. 修改MultiStringMatch类中的构造转换表的函数，加入忽略大
   小写查找（替换的没改）；
2. 修改MultiStringMatch中大小写的一个bug：当主串中是小写，子串是大写
   时，找不到；
3. 修改Page.cpp中发送http头部代码为utf-8，及\n改为\r\n；
4. 在查找页面中加入多关键字查找，及与、或关系；
5. 统一标题、正文件查找代码（均支持多模、与、或、大小写）；
6. 所有html代码转换为utf-8编码；
7. 修改发送到web浏览器的头部，早\n改为\r\n；

[2011-05-07]
1. 去掉Menu::Cache::Load()中的菜单有效性检测，因为菜单可能是新建的；
2. 修改菜单项的引用计数，在Submit_SaveText::AdjustType()中；
