@@ -8,6 +8,11 @@
     color:#FA8072;
     margin-top:3px;
     white-space: nowrap;
+
+    /* 自动隐藏超出的部分  */
+    width: 98%;
+    overflow: hidden;          
+    text-overflow: ellipsis;
 }
 </style> 
  
